--- a/style.css
+++ b/style.css
@@ -72,3 +72,41 @@ font-weight: 400;
 line-height: 30px;
 margin: 0 660px 50px 660px;
 }
+
+.main-div-container{
+    display: flex;
+    justify-content: space-between;
+    width: 1440px;
+    height: 538px;
+}
+
+.container-pic1 img{
+    width: 310px;
+height: 428px;
+padding: 110px 78px 0;
+border-radius: 300px 300px 0px 0px;
+background: rgba(167, 33, 98, 0.15);
+}
+
+.container-pic2 img{
+    width: 370px;
+    height: 370px;
+    border-radius: 300px 300px 0px 0px;
+background: rgba(5, 151, 160, 0.15);
+padding: 117px 47px 51px;
+}
+.container-pic3 img{
+    width: 314px;
+    height: 471px;
+    border-radius: 300px 300px 0px 0px;
+background: rgba(71, 125, 17, 0.15);
+padding: 65px 75px 0;
+}
+.para-info{
+    color: #272727;
+font-size: 24px;
+font-weight: 700;
+line-height: 35px; /* 145.833% */
+text-decoration-line: underline;
+text-align: center;
+}
