--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    width: 1920px;
-    height: 4867px;
+   
 }
 
 .header-section {
@@ -193,6 +192,9 @@ img {
     height: 420px;
     padding-top: 100px 429px 100px 0;
 }
+.instagram{
+    margin-bottom: 550px;
+}
 
 .ins-title {
     color: #272727;
@@ -215,7 +217,7 @@ img {
 .ins-img {
     position: absolute;
     display: flex;
-    margin-bottom: 150px;
+    
 }
 
 .ins-gap>img {
@@ -224,6 +226,73 @@ img {
 }
 
 .deals-container {
-
     background-image: url('Flower Asset/Rectangle 9.png');
+    width: 1440px;
+height: 449px;
+margin: 0 240px;
+background-repeat: no-repeat;
+padding-top: 150px;
+}
+.deals-container h1{
+    color: #272727;
+    text-align: center;
+font-size: 40px;
+font-weight: 800;
+
+}
+.deals-container p{
+    color: rgba(39, 39, 39, 0.60);
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+text-align: center;
+margin-top: 10px; /* 166.667% */
+}
+.info >input{
+    width: 700px;
+height: 64px;
+border-radius: 8px;
+background: #FFF;
+margin-left: 287px;
+}
+.info>button{
+    width: 150px;
+height: 64px;
+border-radius: 8px;
+background: #E55473;
+color: #FFF;
+font-size: 20px;
+}
+.footer{
+    width: 1922px;
+height: 449px;
+background: #111010;
+}
+
+.footer>h1{
+    color: #E55473;
+font-size: 48px;
+font-weight: 800;
+text-align: center;
+padding-top: 128px;
+}
+.footer-span{
+    color: #FFF;
+}
+
+.footer>h4{
+    color: rgba(255, 255, 255, 0.90);
+text-align: center;
+width: 625px;
+margin: 24px 648px ;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+}
+.footer>p{
+    color: rgba(255, 255, 255, 0.40);
+text-align: center;
+font-family: Lato;
+font-size: 16px;
+font-weight: 400;
 }
